--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Info</title>
+    <link rel="stylesheet" href="css/Styles.css">
   </head>
   <body>
     <h3>My list of contacts</h3>
