--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Nathnael's Personal Site</title>
+  <link rel="stylesheet" href="css/Styles.css">
 </head>
 
 <body>
   <table cellspacing = "20">
     <tr>
-      <td><img src="MyPicture.png" alt="MyPicture"></td>
+      <td><img src="Images/MyPicture.png" alt="MyPicture"></td>
       <td><h1> Nathnael Gebre</h1>
       <p><em>Student at SFSU</em></p>
       <p>I am a computer science student and I go to <a href="https://www.sfsu.edu/">SFSU</a></p></td>
@@ -71,5 +72,5 @@
   <a href="Hobbies.html">My Hobbies</a>
   <p><a href="ContactInfo.html">My Contact Info</a></p>
 </body>
-
+a
 </html>
